给所有棋盘决策增加统一倒计时。